<resources>
    <string name="appName">數位電視</string>
    <string name="ChannelNo">序號</string>
    <string name="ChannelName">頻道名稱</string>
    <string name="ChannelSearch">節目搜索</string>
    <string name="sure">確認</string>
    <string name="back">返回</string>
    <string name="select">選擇</string>
    <string name="clear">删除</string>
    <string name="page">翻頁</string>
    <string name="SearchType">搜索類型:</string>
    <string name="AutoScan">自動搜索</string>
    <string name="ManualScan">手動搜索</string>
    <string name="SearchNow">立即搜索</string>
    <string name="ModulationMode">調製方式(QAM):</string>
    <string name="InputFrequency">輸入頻率(KHz):</string>
    <string name="ModulationModeDefault">256 QAM</string>
    <string name="InputFrequencyDefault">735000</string>
    <string name="SymbolRate">符碼率(Kbps):</string>
    <string name="SymbolRateDefault">5210</string>
    <string name="SignalStrength">信號強度</string>
    <string name="SignalQuality">信號質量</string>
    <string name="Mon">星期一</string>
    <string name="Tue">星期二</string>
    <string name="Wed">星期三</string>
    <string name="Thr">星期四</string>
    <string name="Fri">星期五</string>
    <string name="Sat">星期六</string>
    <string name="Sun">星期日</string>
    <string name="ChannelSearchResult">搜索結果</string>
    <string name="TV">電視</string>
    <string name="Radio">廣播</string>
    <string name="AllChannels">所有節目:</string>
    <string name="TVChannels">電視節目:</string>
    <string name="RadioChannels">廣播節目:</string>
    <string name="TVChannel">電視節目</string>
    <string name="RadioChannel">廣播節目</string>
    <string name="ChannelSearchProgress">搜索進度</string>
    <string name="ChannelList">頻道列表</string>
    <string name="OK">確&#160;&#160;認</string>
    <string name="Cancel">取&#160;&#160;消</string>
    <string name="searchTips">提示</string>
    <string name="PasswordTips">密碼為4位數字</string>
    <string name="channelNotice">很抱歉，您還沒有節目!</string>
    <string name="searchNotice">沒有搜索到節目，您是否嘗試重新搜索?</string>
    <string name="search_freq_settings">頻點設置</string>
    <string name="main_frequency">主頻點(KHz)</string>
    <string name="password_title">提示資訊</string>
    <string name="password_programme">請輸入節目鎖密碼</string>
    <string name="password_stb">輸入機頂盒密碼</string>
    <string name="password_wrong_tips">密碼錯誤請重新輸入</string>
    <string name="viewing_level_control">本節目收視級別管制中</string>
    <string name="viewing_level_control_remove">按F1解除管制</string>
    <string name="category_level_control">本節目類別-</string>
    <string name="category_controlling">管制中</string>
    <string name="category_movie">電影</string>
    <string name="category_albums">影集</string>
    <string name="category_soap">連劇</string>
    <string name="category_variety">綜藝</string>
    <string name="category_music">音樂</string>
    <string name="category_cognitivene">知性</string>
    <string name="category_sports">體育</string>
    <string name="category_cartoons">卡通</string>
    <string name="category_news">新聞</string>
    <string name="category_opera">戲曲</string>
    <string name="category_other">其他</string>
    <string name="E00">E00&#160;&#160;非加密節目</string>
    <string name="E01">E01&#160;&#160;請插入智能卡</string>
    <string name="E02">E02&#160;&#160;無法識別智能卡</string>
    <string name="E03">E03&#160;&#160;正在校驗智能卡</string>
    <string name="E04">E04&#160;&#160;無節目</string>
    <string name="E05">E05&#160;&#160;子卡認證成功</string>
    <string name="E06">E06&#160;&#160;智能卡OK</string>
    <string name="E07">E07&#160;&#160;子卡認證失敗</string>
    <string name="E08">E08&#160;&#160;母卡認證失敗</string>
    <string name="E09"></string>
    <string name="E10">E10&#160;&#160;無法識別的加密節目</string>
    <string name="E11">E11&#160;&#160;區域碼不匹配</string>
    <string name="E12">E12&#160;&#160;機卡不匹配</string>
    <string name="E13">E13&#160;&#160;父母鎖級別太低</string>
    <string name="E14">E14&#160;&#160;控制字錯誤</string>
    <string name="E15">E15&#160;&#160;沒有解密授權</string>
    <string name="E16">E16&#160;&#160;成功解擾</string>
    <string name="E17">E17&#160;&#160;子卡認證過期</string>
    <string name="E18">E18&#160;&#160;用戶禁播准播控制</string>
    <string name="E19">E19&#160;&#160;區域禁播准播控制</string>
    <string name="E20">E20&#160;&#160;IPPV節目</string>
    <string name="E21">E21&#160;&#160;智能卡節目商授權被暫停</string>
    <string name="E22">E22&#160;&#160;智能卡處於未激活狀態</string>
    <string name="E23">E23&#160;&#160;智能卡超出有效期</string>
    <string name="E24">E24&#160;&#160;智能卡授權被暫停</string>
    <string name="E25">E25&#160;&#160;分配ECM Channel失敗</string>
    <string name="E26">E26&#160;&#160;解擾通道分配失敗</string>
    <string name="E27">E27&#160;&#160;解擾時智能卡錯誤</string>
    <string name="E28">E28&#160;&#160;節目狀態錯誤</string>
    <string name="E29">E29&#160;&#160;分配ECM Filter失敗</string>
    <string name="E30">E30&#160;&#160;PID切換失敗</string>
    <string name="E40">E40&#160;&#160;用戶准禁播設置成功</string>
    <string name="E41">E41&#160;&#160;用戶准禁播數據讀取成功</string>
    <string name="E42">E42&#160;&#160;用戶准禁播設置時間錯誤</string>
    <string name="E43">E43&#160;&#160;用戶准禁播控制時間超長</string>
    <string name="E44">E44&#160;&#160;用戶准禁播設置通道錯誤</string>
    <string name="E45">E45&#160;&#160;用戶准禁播設置模式錯誤</string>
    <string name="E46">E46&#160;&#160;用戶准禁播設置PIN碼錯誤</string>
    <string name="E47">E47&#160;&#160;用戶准禁播設置失敗</string>
    <string name="E48"></string>
    <string name="E49"></string>
    <string name="E50">E50&#160;&#160;IPPV點播成功</string>
    <string name="E51">E51&#160;&#160;IPPV密碼錯誤</string>
    <string name="E52">E52&#160;&#160;IPPV節目過期</string>
    <string name="E53">E53&#160;&#160;IPPV點播金額不足</string>
    <string name="E54">E54&#160;&#160;IPPV點播方式不支持</string>
    <string name="E55">E55&#160;&#160;IPPV點播失敗</string>
    <string name="E56">E56&#160;&#160;IPPV結束成功</string>
    <string name="E57">E57&#160;&#160;IPPV結束失敗</string>
    <string name="cti_ippv_title">IPPV節目</string>
    <string name="cti_ippv_tips">這是付費節目,您需要輸入密碼購買觀看.</string>
    <string name="cti_ippv_service_id">節目號：</string>
    <string name="cti_ippv_company">節目運營商ID：</string>
    <string name="cti_ippv_company_name">運營商名稱：</string>
    <string name="cti_ippv_purchase_way">購買方式：</string>
    <string name="cti_ippv_purchase_by_channel_tips">一次性購買價格:</string>
    <string name="cti_ippv_purchase_by_time_tips">按觀看時間購買價格:</string>
    <string name="cti_ippv_purchase_by_channel_unit">元</string>
    <string name="cti_ippv_purchase_by_time_unit">元/分鐘</string>
    <string name="cti_ippv_by_channel">一次性購買</string>
    <string name="cti_ippv_by_time">按時間購買</string>
    <string name="cti_ippv_next_time">不購買節目</string>
    <string name="cti_ippv_pin_code">輸入密碼：</string>
    <string name="cti_ippv_status0">IPPV節目點播成功</string>
    <string name="cti_ippv_status1">輸入PIN碼錯誤</string>
    <string name="cti_ippv_status2">IPPV節目已過期</string>
    <string name="cti_ippv_status3">卡內金額不足</string>
    <string name="cti_ippv_status4">點播方式不支持</string>
    <string name="cti_ippv_status5">點播失敗</string>
    <string name="cti_ippv_status6">IPPV停止成功</string>
    <string name="cti_ippv_status7">IPPV停止失敗</string>
    <string name="cti_ippv_status8">操作類型錯誤</string>
    <string name="dvb_soundtrack_settings">聲道設定</string>
    <string name="dvb_st_language_selection">語言選擇:</string>
    <string name="dvb_st_soundtrack_selection">聲道選擇:</string>
    <string name="dvb_st_soundtrack_stereo">立體聲</string>
    <string name="dvb_st_soundtrack_mix">混合</string>
    <string name="dvb_st_soundtrack_left">左聲道</string>
    <string name="dvb_st_soundtrack_right">右聲道</string>
    <string name="dvb_soundtrack_lang">語言</string>
    <string name="dvb_config">配置文件</string>
    <string name="dvb_config_version">DVB版本:</string>
    <string name="dvb_config_id">Tuner ID:</string>
    <string name="dvb_config_tuner_1">Tuner 1</string>
    <string name="dvb_config_tuner_2">Tuner 2</string>
    <string name="dvb_config_bandwidth">Tuner帶寬:</string>
    <string name="dvb_config_bandwidth_6m">6 M</string>
    <string name="dvb_config_bandwidth_8m">8 M</string>
    <string name="dvb_config_bandwidth_other">OTHER</string>
    <string name="dvb_config_bat">BAT限制:</string>
    <string name="dvb_config_bat_limit">限制</string>
    <string name="dvb_config_bat_no_limit">不限制</string>
    <string name="dvb_config_default_encode">默認編碼方式:</string>
    <string name="dvb_config_encode_gbk">GBK</string>
    <string name="dvb_config_encode_big5">BIG5</string>
    <string name="dvb_config_encode_unicode">UNICODE</string>
    <string name="dvb_config_encode_utf8">UTF8</string>
    <string name="dvb_config_encode_other">OTHER</string>
    <string name="NoSignal">無信號</string>
    <string name="ProgramInterrupt">節目中斷</string>
    <string name="NoPrograms">節目不存在</string>
    <string name="NITUpdate">是否進行節目更新？</string>
    <string name="SaveProgram">正在保存節目內容，請稍後!</string>
    <string name="no_program_auto_search">節目為空,是否自動搜索節目?</string>
    <string name="auto_search_or_not">是否重新搜索節目,請確認 &#8230;</string>
    <string name="ChannelEdit">節目編輯</string>
    <string name="EditFav">喜愛</string>
    <string name="EditMov">移動</string>
    <string name="EditLock">鎖定</string>
    <string name="EditDel">刪除</string>
    <string name="EditDelAll">全部刪除</string>
    <string name="AllPrograms">所有節目</string>
    <string name="TVPrograms">電視節目</string>
    <string name="BroadcastPrograms">廣播節目</string>
    <string name="FavPrograms">喜愛節目</string>
    <string name="Programme_Password">請輸入節目鎖密碼</string>
    <string name="Parent_Child_Password">請輸入親子鎖密碼</string>
    <string name="Wrong_Password">密碼錯誤，請重新輸入密碼!</string>
    <string name="input_password_tips">密碼不正確</string>
    <string name="input_password_try_again">請再試一次</string>
    <string name="Save_tips">是否保存編輯的信息？</string>
    <string name="ChannelEpg">節目指南</string>
    <string name="epg_current_name">當前節目資訊</string>
    <string name="epg_next_name">後續節目資訊</string>
    <string name="ca_current_name">當前節目:</string>
    <string name="ca_cost_rate">費率:</string>
    <string name="ca_introduction">節目簡介:</string>
    <string name="ca_buy">購買</string>
    <string name="ca_exit">離開</string>
    <string name="ca_notice">公告</string>
    <string name="ca_reminder">提醒</string>
    <string name="ca_ipp_purchase_success">購買成功!</string>
    <string name="ca_ipp_purchase_fail">購買失敗!</string>
    <string name="ca_child_pwd">請輸入兒童鎖密碼</string>
    <string name="invilid_programme">無效節目!</string>
    <string name="epg_title">節目指南</string>
    <string name="today">今天</string>
    <string name="progTime">節目時間</string>
    <string name="progName">節目內容</string>
    <string name="progOrder">預約</string>
    <string name="channelProm">電視節目</string>
    <string name="convertService">選擇節目</string>
    <string name="ca_authInfo">運營商資訊</string>
    <string name="ca_playControl">用戶准播/禁播</string>
    <string name="ca_back">返回</string>
    <string name="ca_ok">確認</string>
    <string name="ca_card_info">智能卡不存在,請插入智能卡!</string>
    <string name="dialog_name">是否通过测试？</string>
    <string name="dialog_menu">菜单</string>
    <string name="dialog_up">上</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_down">下</string>
    <string name="dialog_left">左</string>
    <string name="dialog_right">右</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="ca_ppid_no">序號</string>
    <string name="ca_ppid_id">節目提供商標識</string>
    <string name="ca_ppid_name">節目提供商名稱</string>
    <string name="ca_ppid_status">節目提供商狀態</string>
    <string name="ca_control_title">準禁播控制</string>
    <string name="ca_control_set">設置準播/禁播</string>
    <string name="ca_control_query">查詢準播/禁播</string>
    <string name="ca_control_cancel">取消準播/禁播</string>
    <string name="ca_control_mode">模式設置</string>
    <string name="ca_control_status">控制狀態</string>
    <string name="ca_control_s_date">開始日期</string>
    <string name="ca_control_s_time">開始時間</string>
    <string name="ca_control_e_date">結束日期</string>
    <string name="ca_control_e_time">結束時間</string>
    <string name="ca_control_s_channel">開始通道</string>
    <string name="ca_control_e_channel">結束通道</string>
</resources>