<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="700px"
	 android:layout_height="wrap_content"
	android:orientation="vertical" 
	android:layout_gravity = "center"
	android:gravity="center"
	android:background="@color/blue"
>
	<TextView android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/dialog_name"
	    android:layout_marginLeft="20dip"
	    android:textSize="30px"/>
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="100dip"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal"
	    >
	    <TextView android:id="@+id/dialog_menu"
	        android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_menu"
	        android:textColor="@android:color/white"
	        android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/dialog_ok"
	        android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_ok"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/dialog_up"
	         android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_up"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/dialog_down"
	        android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_down"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/dialog_left"
	        android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_left"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	    <TextView android:id="@+id/dialog_right"
	       android:layout_width="70dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_right"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="15dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
	</LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        
        android:gravity="center_horizontal">
        <TextView android:id="@+id/dialog_yes"
            android:layout_width="80dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_yes"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="20dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
        <TextView android:id="@+id/dialog_no"
            android:layout_width="80dip"
	        android:layout_height="50dip"
	        android:text="@string/dialog_no"
	         android:textColor="@android:color/white"
	         android:gravity="center"
	        android:layout_margin="20dip"
	        android:textSize="25px"
	        android:background="@android:color/darker_gray"/>
    </LinearLayout>
    	
</LinearLayout>